# telegram-consumer

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: deploy.yaml
examples/: instagram.json  no-image.json  one-image.json
function/: app.py  schemas.py  settings.py  utils.py
function/telegram/: message.py  sender.py
src/: app.py  schemas.py  settings.py
src/telegram/: message.py  sender.py
