[tool.poetry]
name = "open-news-brasil-telegram-lambda"
version = "0.1.0"
description = ""
authors = ["João Paulo Carvalho <jjpaulo2@protonmail.com>"]
readme = "README.md"
packages = [
    { include = "*", from = "function", to = "function" },
    { include = "*/**", from = "function", to = "function" },
]

[tool.poetry.dependencies]
python = "^3.11"
aws-lambda-powertools = {extras = ["parser"], version = "^3.0.0"}
pyrogram = "^2.0.106"
tgcrypto = "^1.2.5"
emoji = "^2.13.2"

[tool.poetry-plugin-lambda-build]
package-artifact-path = "dist/lambda.zip"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
